--- a/maingame/style.css
+++ b/maingame/style.css
@@ -1,16 +1,20 @@
-html,body{
-	height: 100%;
+html,
+body {
+    height: 100%;
+}
+
+#container-fluid {
+    min-height: 100%;
 }
 
 #sidebar {
-	background-color:lavender; 
+    background-color: lavender;
 }
 
 #game {
-	background-color: pink;
+    background-color: pink;
 }
 
-.fill{
-	min-height: 100%;
+.fill {
+    min-height: 100%;
 }
-
