--- a/maingame/style.css
+++ b/maingame/style.css
@@ -8,11 +8,11 @@ body {
 }
 
 #sidebar {
-    background-color: lavender;
+    background-color: #99bebe;
 }
 
 #game {
-    background-color: pink;
+    background-color: #ffb6c1;
 }
 
 .fill {
