changed UI colors

--- a/mainproduct/style.css
+++ b/mainproduct/style.css
@@ -8,11 +8,11 @@ body {
 }
 
 #sidebar {
-/*    background-color: lavender;*/
+    background-color: #ffb6c1;
 }
 
 #game {
-/*    background-color: lightgreen;*/
+    background-color: #a7bc4d;
 }
 
 .fill {
