--- a/mainproduct/style.css
+++ b/mainproduct/style.css
@@ -4,7 +4,25 @@ body {
 }
 
 #container-fluid {
+    height: 100%;
+}
+
+.fill {
     min-height: 100%;
+}
+
+.col-sm-4 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+}
+
+.col-sm-8 {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
 }
 
 #sidebar {
@@ -13,8 +31,4 @@ body {
 
 #game {
     background-color: #a7bc4d;
-}
-
-.fill {
-    min-height: 100%;
 }
