--- a/VideoTest/style.css
+++ b/VideoTest/style.css
@@ -6,7 +6,7 @@ video, canvas {
 }
 span {
   display: inline-block;
-  background: #fc7e01;
+  background: #f5253c;
   padding: 10px;
   margin: 20px 0;
   color: #fff;
