changed css and introscreen files

--- a/mainproduct/style.css
+++ b/mainproduct/style.css
@@ -26,11 +26,11 @@ body {
 }
 
 #sidebar {
-    background-color: #ffb6c1;
+    background-color: #ffcc3f;
 }
 
 #game {
-    background-color: #a7bc4d;
+    background-color: #d0dfd2;
 }
 
 #stopbutton,
